ZHIBOXBK-1126 IOS老师和学生视频上的浮窗 1 .视频复位 图片需要修改一下（全体复位有竖道，视频复位没有竖道）2.全都显示为白色 而不是蓝色，如下图为正确样式

--- a/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
+++ b/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
@@ -1278,9 +1278,9 @@
 		<key>bgColor</key>
 		<string></string>
 		<key>iconNor</key>
-		<string>videoPop_videoReset_selected_skin</string>
-		<key>iconSel</key>
 		<string>videoPop_videoReset_skin</string>
+		<key>iconSel</key>
+		<string>videoPop_videoReset_selected_skin</string>
 	</dict>
 	<key>videoPop_seatButton</key>
 	<dict>
@@ -1314,6 +1314,17 @@
 		<string>videoPop_IsFouceNo_skin</string>
 		<key>iconSel</key>
 		<string>videoPop_IsFouce_skin</string>
+	</dict>
+	<key>videoPop_allResetButton</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>videoPop_allResetNo_skin</string>
+		<key>iconSel</key>
+		<string>videoPop_allReset_skin</string>
 	</dict>
 	<key>answer_openResult</key>
 	<dict>
