ZHIBOXBK-1099 老师设置全体静音以后，需要修改为该上台学生的音频 icon 置灰 1V1和1v多都需要修改

--- a/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
+++ b/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
@@ -1237,6 +1237,8 @@
 		<string>videoPop_soundOpen_Skin</string>
 		<key>iconSel</key>
 		<string>videoPop_soundClose_Skin</string>
+		<key>iconDis</key>
+		<string>videoPop_soundDis_Skin</string>
 	</dict>
 	<key>videoPop_authorizeButton</key>
 	<dict>
