--- a/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
+++ b/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
@@ -26,6 +26,8 @@
 		<string>#24262C</string>
 		<key>defaultSelectedBgColor</key>
 		<string>#82ABEC</string>
+		<key>defaultListSelectedBgColor</key>
+		<string>#2E3037</string>
 		<key>WhiteBoardBgColor</key>
 		<string>#2E3037</string>
 		<key>PopViewBgColor</key>
