登录页面的 用户协议 隐私政策

--- a/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
+++ b/YSSkinManager/YSSkinRsource.bundle/BlackColor.plist
@@ -802,6 +802,17 @@
 		<key>iconSel</key>
 		<string>login_showPassword_yes_skin</string>
 	</dict>
+	<key>login_userAgreement</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>login_userAgreement_no_skin</string>
+		<key>iconSel</key>
+		<string>login_userAgreement_yes_skin</string>
+	</dict>
 	<key>message_bottombar</key>
 	<dict>
 		<key>tittleColor</key>
