--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,7 @@ xcdebugger/
 #xcschemes/
 
 
-YSLib/
+YSLib/BMKit/BMKit.framework
 YSLiveSample/YSLiveSample/YSLib/
 YSWhiteBoardSample/YSLiveSample/YSLib/
 
