--- a/YSLive/Info.plist
+++ b/YSLive/Info.plist
@@ -87,6 +87,6 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
 	<key>YSAppCommitVersion</key>
-	<string></string>
+	<string>2020090300</string>
 </dict>
 </plist>
