资源位置移动

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ YSLib/BMKit/BMKit.framework
 YSLiveSample/YSLiveSample/YSLib/
 YSWhiteBoardSample/YSLiveSample/YSLib/
 CHWhiteBoardSample/CHWhiteBoardSample/CHLib/
+CHWhiteBoardSample/CHWhiteBoardSample/Resources/
 
 
 
