--- a/CloudHubWhiteBoardSDKDemo/Podfile
+++ b/CloudHubWhiteBoardSDKDemo/Podfile
@@ -3,6 +3,7 @@
 
 target 'CloudHubWhiteBoardSDKDemo' do
   
+  pod 'TZImagePickerController'
   pod 'MBProgressHUD', '~> 1.1.0'
   pod 'Masonry', '~> 1.1.0'
 
