--- a/YSSkinManager/YSSkinRsource.bundle/MiddleColor.plist
+++ b/YSSkinManager/YSSkinRsource.bundle/MiddleColor.plist
@@ -2,59 +2,39 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CommonColorss</key>
-	<dict>
-		<key>blackColor</key>
-		<string>#000000</string>
-		<key>whiteColor</key>
-		<string>#FFFFFF</string>
-		<key>mediaSliderBgColor</key>
-		<string>#545454</string>
-		<key>noVideoMaskBgColor</key>
-		<string>#40424A</string>
-		<key>timer_timeBgColor</key>
-		<string>#DEEAFF</string>
-		<key>placeholderColor</key>
-		<string>#828282</string>
-		<key>lineColor</key>
-		<string>#313131</string>
-		<key>login_lineColor</key>
-		<string>#979797</string>
-		<key>defaultTitleColor</key>
-		<string>#ffffff</string>
-		<key>defaultBgColor</key>
-		<string>#24262C</string>
-		<key>defaultSelectedBgColor</key>
-		<string>#82ABEC</string>
-		<key>defaultListSelectedBgColor</key>
-		<string>#2E3037</string>
-		<key>WhiteBoardBgColor</key>
-		<string>#2E3037</string>
-		<key>PopViewBgColor</key>
-		<string>#212121</string>
-		<key>ToolBgColor</key>
-		<string>#1C1D20</string>
-		<key>videoMaskBack_color</key>
-		<string>#1C1C1C</string>
-		<key>videoBackColor</key>
-		<string>#18191D</string>
-		<key>login_placeholderColor</key>
-		<string>#6D7278</string>
-		<key>raiseHandTitleDefaultColor</key>
-		<string>#66676B</string>
-		<key>jurisdictionCheckFail</key>
-		<string>#FF7D7D</string>
-		<key>liveDefaultBgColor</key>
-		<string>#F1F6FF</string>
-		<key>liveTimeTextColor</key>
-		<string>#818181</string>
-		<key>liveChatBgColor</key>
-		<string>#F6F8FA</string>
-		<key>liveVoteNameTextColor</key>
-		<string>#5A8CDC</string>
-	</dict>
 	<key>CommonColor</key>
-	<dict/>
+	<dict>
+		<key>WhiteColor</key>
+		<string>#FFFFFF</string>
+		<key>Color1</key>
+		<string>#174132</string>
+		<key>Color2</key>
+		<string>#FFFFFF</string>
+		<key>Color3</key>
+		<string>#736D78</string>
+		<key>Color4</key>
+		<string>#EAA165</string>
+		<key>Color5</key>
+		<string>#736D78</string>
+		<key>Color6</key>
+		<string>#ADAAB0</string>
+		<key>Color7</key>
+		<string>#E7E7E7</string>
+		<key>PlaceholderColor</key>
+		<string>#6D7278</string>
+		<key>MaskBgColor</key>
+		<string>#40424A</string>
+		<key>JurisdictionCheckFail</key>
+		<string>#FF7D7D</string>
+		<key>Live_timer_timeBgColor</key>
+		<string>#DEEAFF</string>
+		<key>Live_DefaultBgColor</key>
+		<string>#F1F6FF</string>
+		<key>Live_VoteNameTextColor</key>
+		<string>#5A8CDC</string>
+		<key>Live_TimeTextColor</key>
+		<string>#818181</string>
+	</dict>
 	<key>CommonImage</key>
 	<dict>
 		<key>permission_background</key>
