--- a/YSSkinManager/YSSkinDarkRsource.bundle/DarkColor.plist
+++ b/YSSkinManager/YSSkinDarkRsource.bundle/DarkColor.plist
@@ -17,11 +17,11 @@
 		<key>Color5</key>
 		<string>#FFFFFF</string>
 		<key>Color6</key>
-		<string>#FFFFFF</string>
+		<string>#DEEAFF</string>
 		<key>Color7</key>
 		<string>#313131</string>
 		<key>Color8</key>
-		<string>#FFFFFF</string>
+		<string>#828282</string>
 		<key>Color9</key>
 		<string>#40424A</string>
 		<key>PlaceholderColor</key>
