不小心删除了YSResources.bundle

--- a/YSLib/CHWhiteBoard/CHWBSkinDark.bundle/DarkColor.plist
+++ b/YSLib/CHWhiteBoard/CHWBSkinDark.bundle/DarkColor.plist
@@ -19,7 +19,7 @@
 		<key>Color5</key>
 		<string>#FFFFFF</string>
 		<key>Color6</key>
-		<string>#FFFFFF</string>
+		<string>#DEEAFF</string>
 		<key>Color7</key>
 		<string>#313131</string>
 		<key>PlaceholderColor</key>
