--- a/YSLiveSample/Podfile
+++ b/YSLiveSample/Podfile
@@ -5,5 +5,6 @@ target 'YSLiveSample' do
   
   pod 'MBProgressHUD', '~> 1.1.0'
   pod 'Masonry', '~> 1.1.0'
+  pod 'SSZipArchive', '~> 2.2.3'
 
 end
