mp3，mp4图片资源转移

--- a/YSLive/Info.plist
+++ b/YSLive/Info.plist
@@ -91,6 +91,6 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
 	<key>YSAppCommitVersion</key>
-	<string></string>
+	<string>2021032400</string>
 </dict>
 </plist>
