ZHIBOXBK-2252   1V1 画中画，子画面，在没有上台的情况下，应该展示占位图，现在是透明的 ZHIBOXBK-2248    UI相关 浅色系 ios ZHIBOXBK-2252 1V1 画中画，子画面，在没有上台的情况下，应该展示占位图，现在是透明的

--- a/皮肤包/YSSkinLightRsource.bundle/SkinSource.plist
+++ b/皮肤包/YSSkinLightRsource.bundle/SkinSource.plist
@@ -888,6 +888,19 @@
 		<key>iconDis</key>
 		<string>bottombar_message_dis_skin</string>
 	</dict>
+	<key>videoAdjustment_bottombar</key>
+	<dict>
+		<key>tittleColor</key>
+		<string></string>
+		<key>bgColor</key>
+		<string></string>
+		<key>iconNor</key>
+		<string>videoAdjustment_bottombar_nor_skin</string>
+		<key>iconSel</key>
+		<string>videoAdjustment_bottombar_sel_skin</string>
+		<key>iconDis</key>
+		<string>videoAdjustment_bottombar_dis_skin</string>
+	</dict>
 	<key>nameList_OtherDevice</key>
 	<dict>
 		<key>tittleColor</key>
