--- a/YSLive/Info.plist
+++ b/YSLive/Info.plist
@@ -91,6 +91,6 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
 	<key>YSAppCommitVersion</key>
-	<string></string>
+	<string>2021042100</string>
 </dict>
 </plist>
